[project]
name = "pypdfium2-test"
version = "0.1.0"
description = "PDF to Image Converter with Enhanced Font Support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdfium2 @ file://./pypdfium2/src/pypdfium2",
    "pillow>=10.0.0",
    "fonttools>=4.60.1",
    "pymupdf>=1.26.4",
    "pdf2image>=1.17.0",
    "ctypesgen>=1.1.1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

