[project]
name = "pypdfium2-test"
version = "0.1.0"
description = "PDF to Image Converter with Enhanced Font Support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdfium2>=4.30.0",
    "pillow>=10.0.0",
    "fonttools>=4.60.1",
    "pymupdf>=1.26.4",
    "pdf2image>=1.17.0",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

# Optional: Use local pypdfium2 submodule for development
# Uncomment the following lines when you want to use the local submodule:
# Note: Local submodule may fail to build due to GitHub attestation issues
# FIXED: Using v4.30.1 stable branch which resolves macOS rendering bug
[tool.uv.sources]
pypdfium2 = { path = "./pypdfium2", editable = true }
ctypesgen = { git = "https://github.com/pypdfium2-team/ctypesgen", branch = "pypdfium2" }

[tool.setuptools]
py-modules = ["main", "test_pypdfium2", "pymu"]
include-package-data = true

